# habit-tracker

./: .gitignore  README.md  habit_tracker.db  pyproject.toml  pytest.ini  requirements-dev.txt
data/db/: habit_tracker.db
docs/: Development_Phase_2.pptx  Wokurka-Nikita_IU14141855_OOFPP_Development_Phase_2.pptx  Written_Concept.md  abstract.docx  development_presentation.pptx  habit_tracker_class_diagram.drawio  ~$Wokurka-Nikita_IU14141855_OOFPP_Development_Phase_2.pptx
src/habit_tracker/: __init__.py  __main__.py  app_entry.py
src/habit_tracker.egg-info/: PKG-INFO  SOURCES.txt
src/habit_tracker/analytics/: __init__.py  analytics.py
src/habit_tracker/fixtures/: example_data.py  imperfect_data.py  predefined_habits.py
src/habit_tracker/models/: __init__.py  habit.py  user.py
src/habit_tracker/services/: __init__.py  auth_manager.py  auth_service.py  habit_manager.py  habit_service.py
src/habit_tracker/storage/: __init__.py  sql_store.py  storage.py
src/habit_tracker/ui/: __init__.py  actions.py  app_entry.py  auth_flow.py  cli.py  main_menu.py  menus.py  mode_select.py  screens.py  validators.py
tests/: test_analytics.py  test_auth_manager.py  test_example_data_factories.py  test_habit.py  test_habit_manager.py  test_sql_store.py  test_sql_store_user.py  test_user.py  test_validators.py
tests/helpers/: in_memory_storage.py
