[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "habit-tracker"
version = "0.1.0"
dependencies = ["questionary"]
requires-python = ">=3.10"
description = "CLI habit tracker with persistence and analytics."
readme = "README.md"

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]