[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "habit-tracker"
version = "0.1.0"
description = "CLI habit tracker with persistence and analytics."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "questionary>=2.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
]